hopefully the last changeS

--- a/blog/app/views/user_mailer/registration_confirmation.html.erb
+++ b/blog/app/views/user_mailer/registration_confirmation.html.erb
@@ -20,6 +20,6 @@ The link may not work from a mobile phone.
 <p> 
 Once you have confirmed your account, Wellness Tracker will work in your mobile phone browser or from your desktop. 
 </p>
-<a href=<%=@link %>> Confirm Your Account! </a>
+<p> <%=@link %> Confirm Your Account! </p>
 </body>
 </html>
