--- a/blog/app/assets/stylesheets/main.scss
+++ b/blog/app/assets/stylesheets/main.scss
@@ -132,7 +132,6 @@ body {
 #gold {
     color: #d7903f;
 }
-
 .golden {
     color: #d7903f;
 }
@@ -311,5 +310,8 @@ span {
  	max-height: 50px;
  	}
 
+}img{
+    width:100%;
+    max-width:700px;
 }
 
