--- a/blog/app/views/user_mailer/password_reset.html.erb
+++ b/blog/app/views/user_mailer/password_reset.html.erb
@@ -1,6 +1,6 @@
 <h1>Wellness Automation Password reset</h1>
 <p>To reset your password, click the link below from a desktop browser:</p>
-<a href=<%= @pwdlink %>>Reset Password </a>
+<p> <%= @pwdlink %> Reset Password </a>
 <p>
 If you did not request your password to be reset, please ignore this email and
 your password will stay as it is.
