--- a/blog/app/views/users/new.html.erb
+++ b/blog/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron purpletext">
     <h1>Register</h1>
-    <p> if you haven't already registered with your @lifecarealliance.org email address, you can do so here. </p>
+    <p> if you haven't already registered your email address, you can do so here. </p>
 </div>
 
 <div class="quick">
