made clarifications to the user guide

--- a/blog/app/views/welcome/guide.html.erb
+++ b/blog/app/views/welcome/guide.html.erb
@@ -16,7 +16,7 @@
 </br></br>
 
 <p>This is the main landing page that you will find when you open the webpage. This is the login screen.</br></br>
-Username: This is the username for your Lifecare Alliance wellness account. The username is going to be your Lifecare Alliance email address, for example, johnsmith@lifecarealliance.org</br></br>
+Username: This is the username for your Lifecare Alliance wellness account. The username is going to be your associated email address, for example, johnsmith@lifecarealliance.org</br></br>
 Password: This is the password for your Lifecare Alliance account.</br></br>
 Forgot your password?: This is the link you will click if you have forgotten your password and need to recover it.</br>
 If you already have an account, then enter your information into the provided fields and click the login button. If you are using this for the first time, and do not have an account, then you will need to register for a new account by clicking the register button.</br></br></p>
@@ -27,32 +27,52 @@ If you already have an account, then enter your information into the provided fi
 </br></br>
 
 <p>This is the screen you will be redirected to once you click on the “register” button on the login screen.</br></br>
-Full Name: This is your full name, not a traditional username, for example, John Smith. Nicknames are acceptable as long as they are appropriate, for example, Nick instead of Nicholas.</br></br>
+Full Name: This is your full name, not a traditional username. Nicknames are acceptable as long as they are appropriate, for example, Nick instead of Nicholas.</br></br>
 Password: This the password you want to be associated with your account.</br></br>
 Department: This is the department you work in at LifeCare Alliance.</br></br>
-Email: This is your LifeCare Alliance issued email, for example, johnsmith@lifecarealliance.org</br></br>
+Email: This is your associated email, for example, johnsmith@lifecarealliance.org</br></br>
 After entering all of this information, you click the “Register“ button to finalize the creation of your account.</br></br>
 Clicking the “Back to Login” button will take you back to the Login Screen and all of the information you may have entered so far will be cleared.</br></br></p>
 <hr>
 
-<p>3. Recover Password Screen</p>
+<p>3. Profile Screen</p>
+<center><img src="/assets/profile_desktop.png" alt="Desktop"></center>
+</br></br>
+
+<p>After successfully logging in, you should land on your personal profile page. It will display your name at the top of the page, and your email below that. Beneath your name, it will display a graph which allows to set weekly goals and shows you your progress. There should also be a list of your most recent activities at the bottom of the page.</br></br>
+Up in the upper right hand corner, there are 3 buttons: “Scoreboard”, “Profile”, and “Add Points”. Clicking “Scoreboard” will take you to the scoreboard for the whole company, and “Add Points” will take you to the input form for logging your activities. Since you are already on your profile page, clicking “Profile” merely refreshes the page.</br></br></p>
+<hr>
+
+<p>4. Scoreboard</p>
+<center><img src="/assets/scoreboard_desktop.png" alt="Desktop"></center>
+</br></br>
+
+<p>
+This screen displays the names of your co workers and displays their team and point values. You can sort by department, score, and more by clicking on the relevant header. Clicking on a name simply takes you to their profile.</br></br>
+Up in the upper right hand corner, there are 3 buttons: “Scoreboard”, “Profile”, and “Add Points”. Clicking “Profile” will take you to your personal profile, and “Add Points” will take you to the input form for logging your activities. Since you are already on the scoreboard, clicking “Scoreboard” merely refreshes the page.</br></br></p>
+<hr>
+
+<p>5. Add Points Screen</p>
+<center><img src="/assets/points_desktop.png" alt="Desktop"></center>
+</br></br>
+
+<p>
+Up in the upper right hand corner, there are 3 buttons: “Scoreboard”, “Profile”, and “Add Points”. Clicking “Profile” will take you to your personal profile, and “Scoreboard” will take you to the scoreboard for the whole company. Since you are already on the point input screen, clicking “Add Points” merely refreshes the page.</br></br>
+To add any given activity, simply click the button next to it. You can only add any given activity once a day. For the exercise one, there is also a text field, which you enter your time spent in minutes, and the website will figure out how many points that is equivalent to.</br></br></p>
+
+<hr>
+
+<p>6. Recover Password Screen</p>
 <center><img src="/assets/recover_desktop.png" alt="Desktop"></center>
 </br></br>
 
 <p>This is the screen you will be directed to if you click the “Forgot your password?” link on the main login page.</br></br>
-Email: This is the lifecarealliance.org email associated with your account, for example, johndoe@lifecarealliance.org</br></br>
-After entering your email username, the password on that account will be reset and an email will be sent to that user containing their new temporary password.</br></br></p>
+Email: This is the email associated with your account, for example, johndoe@lifecarealliance.org</br></br>
+After entering your email username, you will be sent an email containing a link which will take you to the change password screen.</br></br></p>
 <hr>
 
-<p>4. Profile Screen</p>
-<center><img src="/assets/profile_desktop.png" alt="Desktop"></center>
-</br></br>
 
-<p>After successfully logging in, you should land on your personal profile page. It will display your name at the top of the page, and your email below that. Beneath your name, it will display a graph which allows to set goals and shows you your progress.</br></br>
-Up in the upper right hand corner, there are 3 buttons: “Scoreboard”, “Profile”, and “Add Points”. Clicking “Scoreboard” will take you to the scoreboard for the whole company, and “Add Points” will take you to the input form for logging your activities. Since you are already on your profile page, clicking “Profile” merely refreshes the page.</br></br></p>
-<hr>
-
-<p>5. Change Password Screen</p>
+<p>7. Change Password Screen</p>
 <center><img src="/assets/password_desktop.png" alt="Desktop"></center>
 </br></br>
 
@@ -60,22 +80,6 @@ Up in the upper right hand corner, there are 3 buttons: “Scoreboard”, “Pro
 Current password: This is what you want your new password to be.</br></br>
 Confirmation: This is just to check for typos, etc.</br></br>
 After hitting submit, your password will be updated.</br></br></p>
-<hr>
-
-<p>6. Add Points Screen</p>
-<center><img src="/assets/points_desktop.png" alt="Desktop"></center>
-</br></br>
-
-<p>Up in the upper right hand corner, there are 3 buttons: “Scoreboard”, “Profile”, and “Add Points”. Clicking “Profile” will take you to your personal profile, and “Scoreboard” will take you to the scoreboard for the whole company. Since you are already on the point input screen, clicking “Add Points” merely refreshes the page.</br></br></p>
-<hr>
-
-<p>7. Scoreboard</p>
-<center><img src="/assets/scoreboard_desktop.png" alt="Desktop"></center>
-</br></br>
-
-<p>
-This screen displays the names of your co workers and displays their team and point values.</br></br>
-Up in the upper right hand corner, there are 3 buttons: “Scoreboard”, “Profile”, and “Add Points”. Clicking “Profile” will take you to your personal profile, and “Add Points” will take you to the input form for logging your activities. Since you are already on the scoreboard, clicking “Scoreboard” merely refreshes the page.</br></br></p>
 <hr>
 
 </div>
